// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LegacyInfoCardUI > should render a LegacyInfoCardUI as migrated 1`] = `
<div>
  <div
    class="card kindSuccess sizeLarge center"
  >
    <button
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-xmark "
        data-icon="xmark"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      class="content"
    >
      <span>
        Your migration’s all set! Pop in or make a fresh account, and we’ll take it from here.
      </span>
    </div>
  </div>
</div>
`;

exports[`LegacyInfoCardUI > should render a LegacyInfoCardUI as not migrated 1`] = `
<div>
  <div
    class="card kindCallToAction sizeLarge center"
  >
    <button
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-xmark "
        data-icon="xmark"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      class="content"
    >
      <span>
        Hey quiz champion! Did your brainy adventures happen on
         
        <a
          href="https://https://legacy.com"
        >
          https://legacy.com
        </a>
        ? No worries— we can save all your quiz creations and epic game stats! Just pop back to
         
        <a
          href="https://https://legacy.com"
        >
          https://legacy.com
        </a>
         one last time, and we’ll magically teleport everything over to
         
        <b>
          <i>
            https://target.com
          </i>
        </b>
        . Ready to blast off your data?
      </span>
    </div>
  </div>
</div>
`;
